--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <title>inffih.com</title>
   </head>
   <body>
-  <h1>inffih.com</h1>
-  <h2>projects.. mostly unfinished projects</h2>
-  <p><a href="https://www.youtube.com/watch?v=9dVMqiilD0o">kulman takaa</a></p>
+  <h1>inffih's stuff</h1>
+  <h2>Audio</h2>
+  <p>
+    <a href="takaisin sateeseen.mp3">kulman takaa</a></br>
+    <a href="jzbeat.mp3">kulman takaa</a></br>
+  </p>
+  <h2>Video</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=9dVMqiilD0o">kulman takaa</a>
+  </p>
+  <h2>Graphics</h2>
   </body>
 </html>
