Updated link texts

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>inffih.com</title>
   </head>
   <body>
-  <h1>inffih's stuff</h1>
+  <h1>Inffih's stuff</h1>
   <h2>Audio</h2>
   <p>
-    <a href="takaisin sateeseen.mp3">kulman takaa</a></br>
-    <a href="jzbeat.mp3">kulman takaa</a></br>
+    <a href="takaisin sateeseen.mp3">Takaisin sateeseen</a></br>
+    <a href="jzbeat.mp3">Jzbeat</a></br>
   </p>
   <h2>Video</h2>
   <p>
-    <a href="https://www.youtube.com/watch?v=9dVMqiilD0o">kulman takaa</a>
+    <a href="https://www.youtube.com/watch?v=9dVMqiilD0o">Kulman takaa</a>
   </p>
   <h2>Graphics</h2>
   </body>
