--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <h1>Inffih's stuff</h1>
   <h2>Audio</h2>
   <p>
-    <a href="takaisin sateeseen.mp3">Takaisin sateeseen</a></br>
+    <a href="takaisin-sateeseen.mp3">Takaisin sateeseen</a></br>
     <a href="jzbeat.mp3">Jzbeat</a></br>
+    <a href="one-in-the-same.mp3">One in the same</a></br>
   </p>
   <h2>Video</h2>
   <p>
