--- a/index.html
+++ b/index.html
@@ -5,17 +5,32 @@
     <title>inffih.com</title>
   </head>
   <body>
+    
   <h1>Inffih's stuff</h1>
   <h2>Audio</h2>
+    
   <p>
-    <a href="takaisin-sateeseen.mp3">Takaisin sateeseen</a></br>
-    <a href="jzbeat.mp3">Jzbeat</a></br>
-    <a href="one-in-the-same.mp3">One in the same</a></br>
+    One In The Same | 2019
+    </br>
+    <audio controls>
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/one-in-the-same.mp3" type="audio/mpeg">
+    </audio>
   </p>
+
+  <p>
+    One In The Same
+    </br>
+    <audio controls>
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/one-in-the-same.mp3" type="audio/mpeg">
+    </audio>
+  </p>
+
   <h2>Video</h2>
-  <p>
-    <a href="https://www.youtube.com/watch?v=9dVMqiilD0o">Kulman takaa</a>
-  </p>
-  <h2>Graphics</h2>
+
+  <video width="320" height="240" controls>
+    <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/videos/the-inffihs-help.mov" type="video/mp4">
+  </video>
+
+  <h2>Images</h2>
   </body>
 </html>
