--- a/index.html
+++ b/index.html
@@ -2,35 +2,48 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>inffih.com</title>
+    <title>Inffih - Portfolio</title>
   </head>
   <body>
+  <p>
+    <b>
+      <a href="#audio">Audio</a> | <a href="#video">Video</a> | <a href="#image">Image</a>
+    </b>
+  </p>
     
-  <h1>Inffih's stuff</h1>
-  <h2>Audio</h2>
+  <h1>Inffih - Portfolio</h1>
+  <h2 id="audio">Audio</h2>
     
   <p>
     One In The Same | 2019
     </br>
     <audio controls>
-      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/one-in-the-same.mp3" type="audio/mpeg">
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/inffih-one-in-the-same.mp3" type="audio/mpeg">
     </audio>
   </p>
 
   <p>
-    One In The Same
+    Takaisin sateeseen | 2019
     </br>
     <audio controls>
-      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/one-in-the-same.mp3" type="audio/mpeg">
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/inffih-takaisin-sateeseen.mp3" type="audio/mpeg">
     </audio>
   </p>
 
-  <h2>Video</h2>
+  <p>
+    JZBeat | 2012
+    </br>
+    <audio controls>
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/inffih-jzbeat.mp3" type="audio/mpeg">
+    </audio>
+  </p>
 
-  <video width="320" height="240" controls>
+  <h2 id="video">Video</h2>
+
+  <video width="320" height="180" controls>
     <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/videos/the-inffihs-help.mov" type="video/mp4">
   </video>
 
-  <h2>Images</h2>
+  <h2 id="image">Images</h2>
   </body>
 </html>
