Updated paths and added takaa ajatusten virran

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     One In The Same | 2019
     </br>
     <audio controls>
-      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/inffih-one-in-the-same.mp3" type="audio/mpeg">
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-one-in-the-same.mp3" type="audio/mpeg">
     </audio>
   </p>
 
@@ -26,7 +26,7 @@
     Takaisin sateeseen | 2019
     </br>
     <audio controls>
-      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/inffih-takaisin-sateeseen.mp3" type="audio/mpeg">
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-takaisin-sateeseen.mp3" type="audio/mpeg">
     </audio>
   </p>
 
@@ -34,7 +34,7 @@
     JZBeat | 2012
     </br>
     <audio controls>
-      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/inffih-jzbeat.mp3" type="audio/mpeg">
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-jzbeat.mp3" type="audio/mpeg">
     </audio>
   </p>
 
@@ -42,15 +42,27 @@
     Hemmopeli | 2010
     </br>
     <audio controls>
-      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/music/inffih-hemmopeli.mp3" type="audio/mpeg">
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-hemmopeli.mp3" type="audio/mpeg">
     </audio>
   </p>
 
   <h2 id="video">Video</h2>
 
-  <video width="320" height="180" controls>
-    <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/videos/the-inffihs-help.mov" type="video/mp4">
-  </video>
+  <p>
+    Help | 2020
+    </br>
+    <video width="320" height="180" controls>
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/the-inffihs-help.mov" type="video/mp4">
+    </video>
+  </p>
+
+  <p>
+    Takaa ajatusten virran | 2020
+    </br>
+    <video width="320" height="180" controls>
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-takaa-ajatusten-virran.mp4" type="video/mp4">
+    </video>
+  </p>
 
   <h2 id="image">Images</h2>
   </body>
