Added piano lick

--- a/index.html
+++ b/index.html
@@ -64,6 +64,14 @@
     </video>
   </p>
 
+  <p>
+    THE Piano lick | 2006
+    </br>
+    <video width="320" height="180" controls>
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-piano-lick-in-2006.mp4" type="video/mp4">
+    </video>
+  </p>
+
   <h2 id="image">Images</h2>
   </body>
 </html>
