--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
   </p>
 
   <p>
-    Hemmopeli | 2010
+    Hemmo | 2010
     </br>
     <audio controls>
-      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-hemmopeli.mp3" type="audio/mpeg">
+      <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-hemmo.mp3" type="audio/mpeg">
     </audio>
   </p>
 
