--- a/index.html
+++ b/index.html
@@ -45,88 +45,141 @@
 
         <hr>
 
-        <h2 id="audio">Audio</h2>
-
         <div>
-          One In The Same | 2019
-          </br>
-          <audio controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-one-in-the-same.mp3" type="audio/mpeg">
-          </audio>
-        </div>
+          <h2 id="audio">Audio</h2>
 
-        <div>
-          Takaisin sateeseen | 2019
-          </br>
-          <audio controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-takaisin-sateeseen.mp3" type="audio/mpeg">
-          </audio>
-        </div>
+          <div>
+            One In The Same | 2019
+            </br>
+            <audio controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-one-in-the-same.mp3"
+                type="audio/mpeg">
+            </audio>
+          </div>
 
-        <div>
-          JZBeat | 2012
-          </br>
-          <audio controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-jzbeat.mp3" type="audio/mpeg">
-          </audio>
-        </div>
+          <div>
+            Takaisin sateeseen | 2019
+            </br>
+            <audio controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-takaisin-sateeseen.mp3"
+                type="audio/mpeg">
+            </audio>
+          </div>
 
-        <div>
-          Jatzy | 2012
-          </br>
-          <audio controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-jatzy.mp3" type="audio/mpeg">
-          </audio>
-        </div>
+          <div>
+            JZBeat | 2012
+            </br>
+            <audio controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-jzbeat.mp3"
+                type="audio/mpeg">
+            </audio>
+          </div>
 
-        <div>
-          Hemmo | 2010
-          </br>
-          <audio controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-hemmo.mp3" type="audio/mpeg">
-          </audio>
-        </div>
+          <div>
+            Jatzy | 2012
+            </br>
+            <audio controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-jatzy.mp3"
+                type="audio/mpeg">
+            </audio>
+          </div>
 
-        <div>
-          Tomte Boss | 2007
-          </br>
-          <audio controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-slimebounce.mp3" type="audio/mpeg">
-          </audio>
-        </div>
-        
-        <hr>
+          <div>
+            Hemmo | 2010
+            </br>
+            <audio controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-hemmo.mp3"
+                type="audio/mpeg">
+            </audio>
+          </div>
 
-        <h2 id="video">Video</h2>
+          <div>
+            Runaway Dungeon | 2007
+            </br>
+            <audio controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/audio/inffih-runaway-dungeon.mp3"
+                type="audio/mpeg">
+            </audio>
+          </div>
 
-        <div>
-          Help | 2020
-          </br>
-          <video width="320" height="180" controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/the-inffihs-help.mov" type="video/mp4">
-          </video>
-        </div>
-
-        <div>
-          Takaa ajatusten virran | 2020
-          </br>
-          <video width="320" height="180" controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-takaa-ajatusten-virran.mp4" type="video/mp4">
-          </video>
-        </div>
-
-        <div>
-          THE Piano lick | 2006
-          </br>
-          <video width="320" height="180" controls>
-            <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-piano-lick-in-2006.mp4" type="video/mp4">
-          </video>
         </div>
 
         <hr>
 
-        <h2 id="image">Images</h2>
+        <div>
+          <h2 id="video">Video</h2>
 
+          <div>
+            <h4>Help | 2020</h4>
+            </br>
+            <video width="320" height="180" controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/the-inffihs-help.mov"
+                type="video/mp4">
+            </video>
+          </div>
+
+          <div>
+            Takaa ajatusten virran | 2020
+            </br>
+            <video width="320" height="180" controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-takaa-ajatusten-virran.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+
+          <div>
+            Double Rainbow | 2020
+            </br>
+            <video width="320" height="180" controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihtrash-double-rainbow.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+
+          <div>
+            Knock Knock | 2018
+            </br>
+            <video width="320" height="180" controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihtrash-knock-knock.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+
+          <div>
+            <h4>Jelliclutch | 2017</h4>
+            </br>
+            <video width="320" height="180" controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihfps-jelliclutch.mpeg"
+                type="video/mpeg">
+            </video>
+          </div>
+
+          <div>
+            <h4>Motivation | 2017</h4>
+            </br>
+            <video width="320" height="180" controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihtrash-motivation.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+
+
+          <div>
+            <h4>THE Piano Lick | 2006</h4>
+            </br>
+            <video width="320" height="180" controls>
+              <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-piano-lick-in-2006.mp4"
+                type="video/mp4">
+            </video>
+          </div>
+
+        </div>
+
+        <hr>
+
+        <div>
+          <h2 id="image">Images</h2>
+        </div>
       </div>
     </div>
   </div>
