Changes to videos layout

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           <h2 id="video">Video</h2>
 
           <div>
-            <h4>Help | 2020</h4>
+            Help | 2020
             </br>
-            <video width="320" height="180" controls>
+            <video width="500" controls>
               <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/the-inffihs-help.mov"
                 type="video/mp4">
             </video>
@@ -121,7 +121,7 @@
           <div>
             Takaa ajatusten virran | 2020
             </br>
-            <video width="320" height="180" controls>
+            <video width="500" controls>
               <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-takaa-ajatusten-virran.mp4"
                 type="video/mp4">
             </video>
@@ -130,7 +130,7 @@
           <div>
             Double Rainbow | 2020
             </br>
-            <video width="320" height="180" controls>
+            <video width="500" controls>
               <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihtrash-double-rainbow.mp4"
                 type="video/mp4">
             </video>
@@ -139,25 +139,25 @@
           <div>
             Knock Knock | 2018
             </br>
-            <video width="320" height="180" controls>
+            <video width="500" controls>
               <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihtrash-knock-knock.mp4"
                 type="video/mp4">
             </video>
           </div>
 
           <div>
-            <h4>Jelliclutch | 2017</h4>
+            Jelliclutch | 2017
             </br>
-            <video width="320" height="180" controls>
+            <video width="500" controls>
               <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihfps-jelliclutch.mpeg"
-                type="video/mpeg">
+                type="video/mp4">
             </video>
           </div>
 
           <div>
-            <h4>Motivation | 2017</h4>
+            Motivation | 2017
             </br>
-            <video width="320" height="180" controls>
+            <video width="500" controls>
               <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffihtrash-motivation.mp4"
                 type="video/mp4">
             </video>
@@ -165,9 +165,9 @@
 
 
           <div>
-            <h4>THE Piano Lick | 2006</h4>
+            THE Piano Lick | 2006
             </br>
-            <video width="320" height="180" controls>
+            <video width="500" controls>
               <source src="https://inffih-portfolio.s3.eu-north-1.amazonaws.com/video/inffih-piano-lick-in-2006.mp4"
                 type="video/mp4">
             </video>
